<resources>
    <string name="app_name">Pharma</string>

    <string name="login_text">Log In</string>
    <string name="signup_text">Sign Up</string>

    <string name="username_text">Username</string>
    <string name="mobile_no_text">Mobile Number</string>
    <string name="password_text">Password</string>
    <string name="new_password_text">New Password</string>
    <string name="confirm_password_text">Confirm Password</string>
    <string name="address_text">Address</string>


    <string name="login_btn_text">Log In</string>
    <string name="signup_btn_text">Sign Up</string>
    <string name="forgot_pass_btn_text">Forgot Password?</string>
    <string name="goback_btn_text">Go Back</string>

    <string name="enter_mobile_no_text">Enter Your Mobile Number</string>
    <string name="continue_btn_text">Continue</string>

    <string name="verification_message_text">
        You are going to receive a 4-digit verification code within 5 minutes via sms. Please, type in the given code to complete the verification process.
    </string>

    <string name="verification_title_text">
        Verify Yourself
    </string>

    <string name="verify_btn_text">Verify</string>
    <string name="resend_code_btn_text">Resend Code</string>

    <string name="reset_btn_text">Reset</string>

    <string name="home_fragment_text">Home</string>
    <string name="products_fragment_text">Products</string>
    <string name="cart_fragment_text">Cart</string>

    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_main_app"></string>
    <string name="settings">Settings</string>
    <string name="order_now">ORDER NOW</string>
</resources>
