<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/grad_bg"
    tools:context=".VerifyActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginHorizontal="30dp"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <TextView
            android:id="@+id/verification_title_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/verification_title_text"
            android:textColor="@color/white"
            android:textSize="28sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/verification_message_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/verification_title_text_view"
            android:layout_marginTop="30dp"
            android:text="@string/verification_message_text"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <com.goodiebag.pinview.Pinview
            android:id="@+id/pinView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/verification_message_text_view"
            android:layout_marginTop="30dp"
            app:cursorVisible="false"
            app:forceKeyboard="true"
            app:hint="0"
            app:inputType="number"
            app:password="false"
            app:pinHeight="40dp"
            app:pinLength="4"
            app:pinWidth="40dp" >
            <requestFocus />

        </com.goodiebag.pinview.Pinview>


        <Button
            android:id="@+id/gobackBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/pinView"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/btn_bg"
            android:fontFamily="sans-serif"
            android:text="@string/goback_btn_text"
            android:textColor="@color/white" />


        <Button
            android:id="@+id/verifyBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/pinView"
            android:layout_alignParentRight="true"
            android:layout_marginTop="40dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/btn_bg"
            android:fontFamily="sans-serif"
            android:text="@string/verify_btn_text"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/resendCodeBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/pinView"
            android:layout_centerInParent="true"
            android:layout_marginTop="120dp"
            android:background="@color/transparent"
            android:fontFamily="sans-serif"
            android:text="@string/resend_code_btn_text"
            android:textColor="@color/white" />
    </RelativeLayout>

</RelativeLayout>