<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/grad_bg"
    tools:context=".SignupActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <ImageView
            android:id="@+id/welcome_screen_logo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/logo"
            android:scaleType="fitCenter"
            android:layout_centerHorizontal="true"/>

        <RelativeLayout
            android:id="@+id/rel_layout1"
            android:paddingHorizontal="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/welcome_screen_logo">

            <TextView
                android:id="@+id/text_view_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signup_text"
                android:layout_centerHorizontal="true"
                android:textSize="30sp"
                android:textColor="@color/white"
                android:fontFamily="sans-serif-medium" />

            <LinearLayout
                android:id="@+id/lin_layout1"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_below="@+id/text_view_login"
                android:orientation="vertical"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mobile_no_text"
                        android:textAllCaps="true"
                        android:textSize="15sp"
                        android:textColor="@color/white"
                        android:fontFamily="sans-serif-light" />

                    <EditText
                        android:id="@+id/mobile_no_input"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@drawable/et_bg"
                        android:layout_marginTop="5dp"
                        android:textSize="15sp"
                        android:textColor="@color/white"
                        android:inputType="phone"
                        android:fontFamily="sans-serif-light"
                        android:paddingHorizontal="15dp"/>

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:layout_marginTop="20dp"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/password_text"
                        android:textAllCaps="true"
                        android:textSize="15sp"
                        android:textColor="@color/white"
                        android:fontFamily="sans-serif-light" />


                    <EditText
                        android:id="@+id/password_input"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@drawable/et_bg"
                        android:layout_marginTop="5dp"
                        android:textSize="15sp"
                        android:inputType="textWebPassword"
                        android:textColor="@color/white"
                        android:fontFamily="sans-serif-light"
                        android:paddingHorizontal="15dp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:layout_marginTop="20dp"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/confirm_password_text"
                        android:textAllCaps="true"
                        android:textSize="15sp"
                        android:textColor="@color/white"
                        android:fontFamily="sans-serif-light" />

                    <EditText
                        android:id="@+id/confirm_password_input"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@drawable/et_bg"
                        android:layout_marginTop="5dp"
                        android:textSize="15sp"
                        android:inputType="textWebPassword"
                        android:textColor="@color/white"
                        android:fontFamily="sans-serif-light"
                        android:paddingHorizontal="15dp"/>

                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>

        <Button
            android:id="@+id/gobackBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_bg"
            android:text="@string/goback_btn_text"
            android:textColor="@color/white"
            android:fontFamily="sans-serif"
            android:layout_below="@id/rel_layout1"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="30dp"/>


        <Button
            android:id="@+id/signupBtn"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_bg"
            android:text="@string/signup_btn_text"
            android:textColor="@color/white"
            android:fontFamily="sans-serif"
            android:layout_below="@id/rel_layout1"
            android:layout_marginTop="40dp"
            android:layout_marginRight="30dp"/>

    </RelativeLayout>

</RelativeLayout>